force-app/main/default/objects/Country_Email__mdt/Country_Email__mdt.object-meta.xml
<CustomObject>
    <label>Country Email</label>
    <pluralLabel>Country Emails</pluralLabel>
</CustomObject>