force-app/main/default/objects/Country_Email__mdt/fields/Check_Digital__c.field-meta.xml
<CustomField>
    <fullName>Check_Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Digital</label>
    <type>Checkbox</type>
</CustomField>