force-app/main/default/objects/Country_Email__mdt/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <length>250</length>
    <type>Text</type>
</CustomField>