force-app/main/default/objects/Country_Email__mdt/listViews/Countries.listView-meta.xml
<ListView>
    <fullName>Countries</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country_Name__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>Countries</label>
    <language>en_US</language>
</ListView>